Ini Settings Changes
========
 * new: xcache.experimental = Off

ChangeLog
========
 * fixed #102: segv when var cacher is too small
 * fixed #55: segv php tokenizer on certain special situation
 * compiler errors: all compiler warning (E_STRICT only currently) is now cached and is supported for user handler

1.3.2 2011-??-??
========
 * fix win32 build against win32 native gnu tools

1.3.1 2010-11-27
========
 * 2G/4G limitation on 64bit arch
 * xcache_unset matching e.g. prefixed_ values

1.3.0 2009-08-04
== ChangeLog ==
 * PHP 5.3 support
 * fixed #138: no segv if cache is not initialized correctly
 * default to 64M for xcache.size in xcache.ini
 * could not show module info in admin page when XCache is the last module
 * wrong http auth realm
 * coverager: font-size and newline fix for firefox
 * admin page is now magic quote gpc aware

1.2.2 2007-12-29
== ChangeLog ==
 * added module dependency
 * live with wrong system time: allow caching files with mtime in further
 * bug fix for compatibility with Zend Optimizer and other non-cachable
 * #59: Maximum execution time of 60 seconds exceeded
 * #102: segv when var cacher is too small
 * #55: segv php tokenizer on certain special situation

1.2.1 2007-07-01
== Ini Settings Changes ==
 * new: xcache.admin.enable_auth = On

== ChangeLog ==
 * #86: remove/edit variable in admin page
 * fixed #109: fast inc/dec was trying to break ro protection
 * fixed #101, #105: Fixed compatibility issue for apache 1.x
 * fixed #94: Garbage collector disabled when xcache.cacher set to off
 * fixed #92: Zend Optimizer compatibility issue
 * fixed #77: hits/misses was not updated
 * fixed #59: pass by reference for internal function was broken
 * fixed #56: xcache_set segfaults when xcache.var_size=0

========
1.2.0 2006-12-10
Ini Settings Changes
========
 * new: xcache.stat = On
 * new: xcache.coverager =  Off
 * chg: xcache.coveragedump_directory default to ""
 * del: xcache.coveragedumper = Off

New APIs
========